[package]
name = "c_hash_sig_crust"
version = "0.2.0"
edition = "2021"

[lib]
name = "c_hash_sig_crust"
crate-type = ["cdylib", "staticlib"]

[dependencies]
cpp = { path = "../cpp" }
lean-multisig = { git = "https://github.com/leanEthereum/leanMultisig.git", rev = "4543620b8e33c16112dcf1fff7f250344913a729" }
leansig = { git = "https://github.com/leanEthereum/leanSig.git" }
rand = "0.9.2"
serde_json = "1.0"
ssz = { package = "ethereum_ssz", version = "0.10.0" }

[build-dependencies]
build-helper = { path = "../build-helper" }
