[package]
name = "c_hash_sig_crust"
version = "0.2.0"
edition = "2021"

[lib]
name = "c_hash_sig_crust"
crate-type = ["cdylib", "staticlib"]

[dependencies]
cpp = { path = "../cpp" }
lean-multisig = { git = "https://github.com/leanEthereum/leanMultisig.git", rev = "825c1fc22bad0bfbdb3a656d209944f38d8733fa" }
leansig = { git = "https://github.com/leanEthereum/leanSig.git", rev = "ae12a5feb25d917c42b6466444ebd56ec115a629" }
rand = "0.9.2"
serde_json = "1.0"
ssz = { package = "ethereum_ssz", version = "0.10.0" }

[build-dependencies]
build-helper = { path = "../build-helper" }
