[package]
name = "c_hash_sig_crust"
version = "0.2.0"
edition = "2021"

[lib]
name = "c_hash_sig_crust"
crate-type = ["cdylib", "staticlib"]

[dependencies]
cpp = { path = "../cpp" }
lean-multisig = { git = "https://github.com/leanEthereum/leanMultisig.git", rev = "8f526d6144b3beb1b1e6b0ec5b6dbdc6d26e81c9" }
leansig = { git = "https://github.com/leanEthereum/leanSig.git", rev = "ae12a5feb25d917c42b6466444ebd56ec115a629" }
rand = "0.9.2"
serde_json = "1.0"
ssz = { package = "ethereum_ssz", version = "0.10.0" }

[build-dependencies]
build-helper = { path = "../build-helper" }
